refactored data seeding